Builders leak their mutable internal list into immutable objects, use `List.copyOf` to address it